@startuml
title Dijagram klasa
left to right direction

skinparam classAttributeIconSize 0
skinparam linetype ortho

class Korisnik <<auth servis>> {
  +id: ObjectId
  +jmbg: string
  +email: string
  +password: string
  +ime: string
  +prezime: string
  +uloga: string
}

class Dete <<predškolstvo>> {
  +id: ObjectId
  +jmbg: string
  +ime: string
  +prezime: string
  +datumRodj: datetime
  +korisnikId: ObjectId
  +vrticID: string
  +grupaID: string
}

class Vrtic <<predškolstvo>> {
  +id: ObjectId
  +naziv: string
  +kapacitet: int
  +brojSlobodnihMesta: int
}

class ZahtevZaUpis <<predškolstvo>> {
  +id: ObjectId
  +deteId: ObjectId
  +vrticId: ObjectId
  +status: string
  +datumPodnosenja: datetime
  +napomena: string
}

class Grupa <<predškolstvo>> {
  +id: ObjectId
  +naziv: string
  +vrticID: string
  +kapacitet: int
  +listaDece: string[]
}

class EvidencijaPrisustva <<predškolstvo>> {
  +id: ObjectId
  +deteId: string
  +vrticId: string
  +tipDogadjaja: string
  +vreme: datetime
  +napomena: string
}

class Obavestenje <<predškolstvo>> {
  +id: ObjectId
  +korisnikId: ObjectId
  +deteId: string
  +grupaId: string
  +poruka: string
  +createdAt: datetime
}

Korisnik "1" o-- "0..*" Dete

Dete "1" o-- "0..*" ZahtevZaUpis
Vrtic "1" o-- "0..*" ZahtevZaUpis
Vrtic "1" o-- "0..*" Grupa
Dete "1" o-- "0..*" EvidencijaPrisustva
Vrtic "1" o-- "0..*" EvidencijaPrisustva : evidencija za vrtic
Korisnik "1" o-- "0..*" Obavestenje
Dete "1" o-- "0..*" Obavestenje
Grupa "1" o-- "0..*" Obavestenje

Grupa "1" o-- "0..*" Dete

@enduml
